// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots AllLoveTypesSection Show App 1`] = `
Array [
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="sc-dxgOiQ MKfDU"
    >
      <button
        className="sc-kEYyzF eyLHPx"
        onClick={[Function]}
      >
        その他の恋愛タイプを表示する
      </button>
      <ul
        className="sc-ckVGcZ NeGJw"
      />
    </div>
  </div>,
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>,
]
`;

exports[`Storyshots Footer Show App 1`] = `
Array [
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="sc-bdVaJa ixGWGg"
    >
      Copyright (c) 2020 nekochans
    </div>
  </div>,
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>,
]
`;

exports[`Storyshots Header Show App 1`] = `
Array [
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="sc-bwzfXH jHMdKz"
    >
      愛の心理学
    </div>
  </div>,
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>,
]
`;

exports[`Storyshots Home Show App 1`] = `
Array [
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="sc-VigVT dVFQQk"
    >
      <div
        className="sc-jTzLTM jSEGtf"
      >
        <div
          className="sc-fjdhpX ghZkBT"
        >
          <h2
            className="sc-jzJRlG itjfQa"
          >
            愛の三角理論
          </h2>
          <p
            className="sc-cSHVUG dxozAm"
          >
            愛の三角形理論についての解説を追加する。
          </p>
          <p
            className="sc-cSHVUG dxozAm"
          >
            1行目。あああああああああああああああああああああああああああああああああああああああああああ。
          </p>
          <p
            className="sc-cSHVUG dxozAm"
          >
            2行目。あああああああああああああああああああああああああああああああああああああああああああ。
          </p>
          <p
            className="sc-cSHVUG dxozAm"
          >
            3行目。あああああああああああああああああああああああああああああああああああああああああああ。
          </p>
          <p
            className="sc-cSHVUG dxozAm"
          >
            4行目。あああああああああああああああああああああああああああああああああああああああああああ。
          </p>
        </div>
        <div
          className="sc-chPdSV hLqMzd"
        >
          <div
            className="sc-kAzzGY iCrcRf"
          >
            <div>
              <h3
                className="sc-kgoBCf dVtLbe"
              >
                親密性（intimacy）
              </h3>
              <p
                className="sc-kGXeez hiuinF"
              >
                親密性についての解説を追加する。あああああああああああああああああああああああああああああああああああああああああああ。
              </p>
            </div>
          </div>
          <div
            className="sc-kAzzGY iCrcRf"
          >
            <div>
              <h3
                className="sc-kgoBCf dVtLbe"
              >
                情熱（passion）
              </h3>
              <p
                className="sc-kGXeez hiuinF"
              >
                情熱についての解説を追加する。あああああああああああああああああああああああああああああああああああああああああああ。
              </p>
            </div>
          </div>
          <div
            className="sc-kAzzGY iCrcRf"
          >
            <div>
              <h3
                className="sc-kgoBCf dVtLbe"
              >
                コミットメント（commitment）
              </h3>
              <p
                className="sc-kGXeez hiuinF"
              >
                コミットメントについての解説を追加する。あああああああああああああああああああああああああああああああああああああああああああ。
              </p>
            </div>
          </div>
        </div>
      </div>
      <a
        className="sc-kpOJdX iugyjW"
        href="/analysis"
        onClick={[Function]}
      >
        <span>
          診断する！
        </span>
      </a>
    </div>
  </div>,
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>,
]
`;

exports[`Storyshots Loading Show App 1`] = `
Array [
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <h3
      className="sc-htpNat dEEQdq"
    >
      Loading...
    </h3>
  </div>,
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>,
]
`;

exports[`Storyshots NextButton Show Disable 1`] = `
Array [
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <button
      className="sc-bxivhb iywRnX"
      disabled={true}
    >
      次へ進む
    </button>
  </div>,
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>,
]
`;

exports[`Storyshots NextButton Show Enable 1`] = `
Array [
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <button
      className="sc-bxivhb jQYskY"
      disabled={false}
    >
      次へ進む
    </button>
  </div>,
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>,
]
`;

exports[`Storyshots QuestionList Show App 1`] = `
Array [
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <ul
      className="sc-EHOje geyxEi"
    >
      <li
        className="sc-bZQynM bZgsew"
      >
        <div
          name="1"
        >
          <p
            className="sc-ifAKCX dfTnaq"
          >
            Q
            1
            . 
            私にとって○○さんとの関係よりも大切なものなど他にはない
          </p>
          <fieldset
            className="sc-gzVnrw fgkonJ"
          >
            <ul
              className="sc-htoDjs fqlXjm"
            >
              <li
                className="sc-dnqmqq iEutut"
              >
                <label
                  checked={true}
                  className="sc-iwsKbI fCXAvX"
                >
                  <input
                    className="sc-gqjmRU bfUpFK"
                    name="1"
                    type="radio"
                    value="1"
                  />
                </label>
                <div
                  className="sc-gZMcBi dSwctt"
                >
                  とても当てはまる
                </div>
              </li>
              <li
                className="sc-dnqmqq iEutut"
              >
                <label
                  checked={false}
                  className="sc-iwsKbI iZZGvu"
                >
                  <input
                    className="sc-gqjmRU bfUpFK"
                    name="1"
                    type="radio"
                    value="2"
                  />
                </label>
                <div
                  className="sc-gZMcBi dSwctt"
                >
                  やや当てはまる
                </div>
              </li>
              <li
                className="sc-dnqmqq iEutut"
              >
                <label
                  checked={false}
                  className="sc-iwsKbI iZZGvu"
                >
                  <input
                    className="sc-gqjmRU bfUpFK"
                    name="1"
                    type="radio"
                    value="3"
                  />
                </label>
                <div
                  className="sc-gZMcBi dSwctt"
                >
                  どちらともいえない
                </div>
              </li>
              <li
                className="sc-dnqmqq iEutut"
              >
                <label
                  checked={false}
                  className="sc-iwsKbI iZZGvu"
                >
                  <input
                    className="sc-gqjmRU bfUpFK"
                    name="1"
                    type="radio"
                    value="4"
                  />
                </label>
                <div
                  className="sc-gZMcBi dSwctt"
                >
                  あまり当てはまらない
                </div>
              </li>
              <li
                className="sc-dnqmqq iEutut"
              >
                <label
                  checked={false}
                  className="sc-iwsKbI iZZGvu"
                >
                  <input
                    className="sc-gqjmRU bfUpFK"
                    name="1"
                    type="radio"
                    value="5"
                  />
                </label>
                <div
                  className="sc-gZMcBi dSwctt"
                >
                  全く当てはまらない
                </div>
              </li>
            </ul>
          </fieldset>
        </div>
      </li>
      <li
        className="sc-bZQynM bZgsew"
      >
        <div
          name="2"
        >
          <p
            className="sc-ifAKCX dfTnaq"
          >
            Q
            2
            . 
            私と○○さんとの関わりは揺るぎないものである
          </p>
          <fieldset
            className="sc-gzVnrw fgkonJ"
          >
            <ul
              className="sc-htoDjs fqlXjm"
            >
              <li
                className="sc-dnqmqq iEutut"
              >
                <label
                  checked={false}
                  className="sc-iwsKbI iZZGvu"
                >
                  <input
                    className="sc-gqjmRU bfUpFK"
                    name="2"
                    type="radio"
                    value="1"
                  />
                </label>
                <div
                  className="sc-gZMcBi dSwctt"
                >
                  とても当てはまる
                </div>
              </li>
              <li
                className="sc-dnqmqq iEutut"
              >
                <label
                  checked={true}
                  className="sc-iwsKbI fCXAvX"
                >
                  <input
                    className="sc-gqjmRU bfUpFK"
                    name="2"
                    type="radio"
                    value="2"
                  />
                </label>
                <div
                  className="sc-gZMcBi dSwctt"
                >
                  やや当てはまる
                </div>
              </li>
              <li
                className="sc-dnqmqq iEutut"
              >
                <label
                  checked={false}
                  className="sc-iwsKbI iZZGvu"
                >
                  <input
                    className="sc-gqjmRU bfUpFK"
                    name="2"
                    type="radio"
                    value="3"
                  />
                </label>
                <div
                  className="sc-gZMcBi dSwctt"
                >
                  どちらともいえない
                </div>
              </li>
              <li
                className="sc-dnqmqq iEutut"
              >
                <label
                  checked={false}
                  className="sc-iwsKbI iZZGvu"
                >
                  <input
                    className="sc-gqjmRU bfUpFK"
                    name="2"
                    type="radio"
                    value="4"
                  />
                </label>
                <div
                  className="sc-gZMcBi dSwctt"
                >
                  あまり当てはまらない
                </div>
              </li>
              <li
                className="sc-dnqmqq iEutut"
              >
                <label
                  checked={false}
                  className="sc-iwsKbI iZZGvu"
                >
                  <input
                    className="sc-gqjmRU bfUpFK"
                    name="2"
                    type="radio"
                    value="5"
                  />
                </label>
                <div
                  className="sc-gZMcBi dSwctt"
                >
                  全く当てはまらない
                </div>
              </li>
            </ul>
          </fieldset>
        </div>
      </li>
      <li
        className="sc-bZQynM bZgsew"
      >
        <div
          name="3"
        >
          <p
            className="sc-ifAKCX dfTnaq"
          >
            Q
            3
            . 
            ○○さんは私にとって非常に魅力的な人だ
          </p>
          <fieldset
            className="sc-gzVnrw fgkonJ"
          >
            <ul
              className="sc-htoDjs fqlXjm"
            >
              <li
                className="sc-dnqmqq iEutut"
              >
                <label
                  checked={false}
                  className="sc-iwsKbI iZZGvu"
                >
                  <input
                    className="sc-gqjmRU bfUpFK"
                    name="3"
                    type="radio"
                    value="1"
                  />
                </label>
                <div
                  className="sc-gZMcBi dSwctt"
                >
                  とても当てはまる
                </div>
              </li>
              <li
                className="sc-dnqmqq iEutut"
              >
                <label
                  checked={false}
                  className="sc-iwsKbI iZZGvu"
                >
                  <input
                    className="sc-gqjmRU bfUpFK"
                    name="3"
                    type="radio"
                    value="2"
                  />
                </label>
                <div
                  className="sc-gZMcBi dSwctt"
                >
                  やや当てはまる
                </div>
              </li>
              <li
                className="sc-dnqmqq iEutut"
              >
                <label
                  checked={false}
                  className="sc-iwsKbI iZZGvu"
                >
                  <input
                    className="sc-gqjmRU bfUpFK"
                    name="3"
                    type="radio"
                    value="3"
                  />
                </label>
                <div
                  className="sc-gZMcBi dSwctt"
                >
                  どちらともいえない
                </div>
              </li>
              <li
                className="sc-dnqmqq iEutut"
              >
                <label
                  checked={false}
                  className="sc-iwsKbI iZZGvu"
                >
                  <input
                    className="sc-gqjmRU bfUpFK"
                    name="3"
                    type="radio"
                    value="4"
                  />
                </label>
                <div
                  className="sc-gZMcBi dSwctt"
                >
                  あまり当てはまらない
                </div>
              </li>
              <li
                className="sc-dnqmqq iEutut"
              >
                <label
                  checked={false}
                  className="sc-iwsKbI iZZGvu"
                >
                  <input
                    className="sc-gqjmRU bfUpFK"
                    name="3"
                    type="radio"
                    value="5"
                  />
                </label>
                <div
                  className="sc-gZMcBi dSwctt"
                >
                  全く当てはまらない
                </div>
              </li>
            </ul>
          </fieldset>
        </div>
      </li>
      <li
        className="sc-bZQynM bZgsew"
      >
        <div
          name="4"
        >
          <p
            className="sc-ifAKCX dfTnaq"
          >
            Q
            4
            . 
            ○○さんとの関係は居心地のよいものである
          </p>
          <fieldset
            className="sc-gzVnrw fgkonJ"
          >
            <ul
              className="sc-htoDjs fqlXjm"
            >
              <li
                className="sc-dnqmqq iEutut"
              >
                <label
                  checked={false}
                  className="sc-iwsKbI iZZGvu"
                >
                  <input
                    className="sc-gqjmRU bfUpFK"
                    name="4"
                    type="radio"
                    value="1"
                  />
                </label>
                <div
                  className="sc-gZMcBi dSwctt"
                >
                  とても当てはまる
                </div>
              </li>
              <li
                className="sc-dnqmqq iEutut"
              >
                <label
                  checked={false}
                  className="sc-iwsKbI iZZGvu"
                >
                  <input
                    className="sc-gqjmRU bfUpFK"
                    name="4"
                    type="radio"
                    value="2"
                  />
                </label>
                <div
                  className="sc-gZMcBi dSwctt"
                >
                  やや当てはまる
                </div>
              </li>
              <li
                className="sc-dnqmqq iEutut"
              >
                <label
                  checked={false}
                  className="sc-iwsKbI iZZGvu"
                >
                  <input
                    className="sc-gqjmRU bfUpFK"
                    name="4"
                    type="radio"
                    value="3"
                  />
                </label>
                <div
                  className="sc-gZMcBi dSwctt"
                >
                  どちらともいえない
                </div>
              </li>
              <li
                className="sc-dnqmqq iEutut"
              >
                <label
                  checked={false}
                  className="sc-iwsKbI iZZGvu"
                >
                  <input
                    className="sc-gqjmRU bfUpFK"
                    name="4"
                    type="radio"
                    value="4"
                  />
                </label>
                <div
                  className="sc-gZMcBi dSwctt"
                >
                  あまり当てはまらない
                </div>
              </li>
              <li
                className="sc-dnqmqq iEutut"
              >
                <label
                  checked={false}
                  className="sc-iwsKbI iZZGvu"
                >
                  <input
                    className="sc-gqjmRU bfUpFK"
                    name="4"
                    type="radio"
                    value="5"
                  />
                </label>
                <div
                  className="sc-gZMcBi dSwctt"
                >
                  全く当てはまらない
                </div>
              </li>
            </ul>
          </fieldset>
        </div>
      </li>
      <li
        className="sc-bZQynM bZgsew"
      >
        <div
          name="5"
        >
          <p
            className="sc-ifAKCX dfTnaq"
          >
            Q
            5
            . 
            ○○さんについて空想にふけることがある
          </p>
          <fieldset
            className="sc-gzVnrw fgkonJ"
          >
            <ul
              className="sc-htoDjs fqlXjm"
            >
              <li
                className="sc-dnqmqq iEutut"
              >
                <label
                  checked={false}
                  className="sc-iwsKbI iZZGvu"
                >
                  <input
                    className="sc-gqjmRU bfUpFK"
                    name="5"
                    type="radio"
                    value="1"
                  />
                </label>
                <div
                  className="sc-gZMcBi dSwctt"
                >
                  とても当てはまる
                </div>
              </li>
              <li
                className="sc-dnqmqq iEutut"
              >
                <label
                  checked={false}
                  className="sc-iwsKbI iZZGvu"
                >
                  <input
                    className="sc-gqjmRU bfUpFK"
                    name="5"
                    type="radio"
                    value="2"
                  />
                </label>
                <div
                  className="sc-gZMcBi dSwctt"
                >
                  やや当てはまる
                </div>
              </li>
              <li
                className="sc-dnqmqq iEutut"
              >
                <label
                  checked={false}
                  className="sc-iwsKbI iZZGvu"
                >
                  <input
                    className="sc-gqjmRU bfUpFK"
                    name="5"
                    type="radio"
                    value="3"
                  />
                </label>
                <div
                  className="sc-gZMcBi dSwctt"
                >
                  どちらともいえない
                </div>
              </li>
              <li
                className="sc-dnqmqq iEutut"
              >
                <label
                  checked={false}
                  className="sc-iwsKbI iZZGvu"
                >
                  <input
                    className="sc-gqjmRU bfUpFK"
                    name="5"
                    type="radio"
                    value="4"
                  />
                </label>
                <div
                  className="sc-gZMcBi dSwctt"
                >
                  あまり当てはまらない
                </div>
              </li>
              <li
                className="sc-dnqmqq iEutut"
              >
                <label
                  checked={false}
                  className="sc-iwsKbI iZZGvu"
                >
                  <input
                    className="sc-gqjmRU bfUpFK"
                    name="5"
                    type="radio"
                    value="5"
                  />
                </label>
                <div
                  className="sc-gZMcBi dSwctt"
                >
                  全く当てはまらない
                </div>
              </li>
            </ul>
          </fieldset>
        </div>
      </li>
    </ul>
  </div>,
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>,
]
`;

exports[`Storyshots ResultSection Show App 1`] = `
Array [
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="sc-kkGfuU hjgmsa"
    >
      <p
        className="sc-iAyFgw dynUmi"
      >
        あなたの恋人や片思いの人への愛の形は
      </p>
      <div
        className="sc-hSdWYo cssXsb"
      >
        <h3
          className="sc-eHgmQL bCIAWj"
        >
          非愛タイプ
        </h3>
        <p
          className="sc-cvbbAY huAxCg"
        >
          全ての要素が足りない。表面的な人間関係
        </p>
        <p
          className="sc-cvbbAY huAxCg"
        >
          恋愛タイプに関するメッセージ等を記載する。あああああああああああああああああああああああああああああああああああああああああああああああ。
        </p>
      </div>
    </div>
  </div>,
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>,
]
`;
